Better support Brainpool curves
Add an openssl 1.0.1 Brainpool patch in misc
 (backported from 1.0.2-beta3)

Use it to build:
setup-xca-1.1.0-brainpool.exe
xca-1.1.0-brainpool.dmg

Check at runtime for the library supporting the curves
and display it in the About dialog

--- a/changelog
+++ b/changelog
@@ -1,3 +1,4 @@
+ * Support for Brainpool windows and MacOSX binaries
  * SF Feat. Req. #70 ability to search certificates
  * SF Feat. Req. #75 show SHA-256 digest
  * RedHat Bug #1164340 - segfault when viewing a
