--- a/changelog
+++ b/changelog
@@ -1,3 +1,5 @@
+xca 1.1.0 Sat Nov 22 2014
+
  * SF Bug #79 Template export from WinXP
    cannot be imported in Linux and Mac OS X
  * Support for Brainpool windows and MacOSX binaries
