--- a/doc/xca.1
+++ b/doc/xca.1
@@ -9,6 +9,12 @@ A GUI for handling X509 certificates, RSA/DSA/EC keys, PKCS#10 Requests and CRLs
 .RI [ -d ]
 .RI [ -x ]
 .br
+.B xca
+.B extract
+.RI <database>
+.RI <type>
+.RI <name>
+.br
 .SH "DESCRIPTION"
 This application is intended as CA, certificate- and Key store. It uses a single file to store the items.
 Supported are Certificate signing requests (PKCS#10), Certificates (X509v3), RSA, DSA and EC keys and Certificate revokation lists.
@@ -46,6 +52,18 @@ the application will startup as usual. With the
 .I -x
 option given it will exit after finishing the import dialog. This is useful if xca is used as default application for viewing certificates, keys or requests.
 
+.TP
+.B xca extract <database> <type> <name>
+extracts the item with internal name
+.I <name>
+and the type
+.I cert
+.I req
+or
+.I crl
+from the database
+.I database
+in PEM format to <STDOUT>
 .SH SEE ALSO
 A more detailed HTML documentation can be found in the doc directory, in the "Help" menu of the application or on http://xca.sf.net
 
