--- a/changelog
+++ b/changelog
@@ -1,3 +1,8 @@
+ * Add Row numbering for easy item counting
+ * Support SSH2 public key format for import and export
+ * Add support for SHA-224
+ * add "xca extract" to export items from the database on the commandline
+
 xca 1.1.0 Sat Nov 22 2014
 
  * SF Bug #79 Template export from WinXP
