--- a/changelog
+++ b/changelog
@@ -1,3 +1,7 @@
+xca 1.2.0 Sat Mar 21 2015
+
+ * Update to OpenSSL 1.0.2a for Windows and MAC
+   drop brainpool extra builds
  * Use CTRL +/- to change the font size in the view
  * Add Row numbering for easy item counting
  * Support SSH2 public key format for import and export
